readable about page + minor fixes

--- a/about.css
+++ b/about.css
@@ -434,7 +434,7 @@
     }
 
     .about-hero-image {
-        width: 60%;
+        width: 75%;
     }
 
 
@@ -537,7 +537,7 @@
     }
 
     .about-hero-image {
-        width: 60%;
+        width: 75%;
     }
 
 
